@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -95,9 +95,10 @@ public class BaseDmxChannel implements Comparable<BaseDmxChannel> {
         if (otherDmxChannel == null) {
             return -1;
         }
-        int universeCompare = new Integer(getUniverseId()).compareTo(new Integer(otherDmxChannel.getUniverseId()));
+        int universeCompare = Integer.valueOf(getUniverseId())
+                .compareTo(Integer.valueOf(otherDmxChannel.getUniverseId()));
         if (universeCompare == 0) {
-            return new Integer(getChannelId()).compareTo(new Integer(otherDmxChannel.getChannelId()));
+            return Integer.valueOf(getChannelId()).compareTo(Integer.valueOf(otherDmxChannel.getChannelId()));
         } else {
             return universeCompare;
         }
