@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,18 +15,24 @@ package org.openhab.binding.enocean.internal.eep;
 import static org.openhab.binding.enocean.internal.messages.ESP3Packet.*;
 
 import java.lang.reflect.InvocationTargetException;
+import java.util.Arrays;
 
 import org.openhab.binding.enocean.internal.eep.Base.UTEResponse;
 import org.openhab.binding.enocean.internal.eep.Base._4BSMessage;
 import org.openhab.binding.enocean.internal.eep.Base._4BSTeachInVariation3Response;
+import org.openhab.binding.enocean.internal.eep.Base._RPSMessage;
 import org.openhab.binding.enocean.internal.eep.D5_00.D5_00_01;
 import org.openhab.binding.enocean.internal.eep.F6_01.F6_01_01;
 import org.openhab.binding.enocean.internal.eep.F6_02.F6_02_01;
+import org.openhab.binding.enocean.internal.eep.F6_05.F6_05_02;
 import org.openhab.binding.enocean.internal.eep.F6_10.F6_10_00;
 import org.openhab.binding.enocean.internal.eep.F6_10.F6_10_00_EltakoFPE;
 import org.openhab.binding.enocean.internal.eep.F6_10.F6_10_01;
 import org.openhab.binding.enocean.internal.messages.ERP1Message;
 import org.openhab.binding.enocean.internal.messages.ERP1Message.RORG;
+import org.openhab.binding.enocean.internal.messages.EventMessage;
+import org.openhab.binding.enocean.internal.messages.EventMessage.EventMessageType;
+import org.openhab.binding.enocean.internal.messages.Responses.SMACKTeachInResponse;
 import org.openhab.core.util.HexUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -45,8 +51,9 @@ public class EEPFactory {
             if (cl == null) {
                 throw new IllegalArgumentException("Message " + eepType + " not implemented");
             }
-            return cl.newInstance();
-        } catch (IllegalAccessException | InstantiationException e) {
+            return cl.getDeclaredConstructor().newInstance();
+        } catch (IllegalAccessException | InstantiationException | IllegalArgumentException | InvocationTargetException
+                | NoSuchMethodException | SecurityException e) {
             throw new IllegalArgumentException(e);
         }
     }
@@ -69,6 +76,21 @@ public class EEPFactory {
         }
     }
 
+    private static EEPType getGenericEEPTypeFor(byte rorg) {
+        logger.info("Received unsupported EEP teach in, trying to fallback to generic thing");
+        RORG r = RORG.getRORG(rorg);
+        if (r == RORG._4BS) {
+            logger.info("Fallback to 4BS generic thing");
+            return EEPType.Generic4BS;
+        } else if (r == RORG.VLD) {
+            logger.info("Fallback to VLD generic thing");
+            return EEPType.GenericVLD;
+        } else {
+            logger.info("Fallback not possible");
+            return null;
+        }
+    }
+
     public static EEP buildEEPFromTeachInERP1(ERP1Message msg) {
         if (!msg.getIsTeachIn() && !(msg.getRORG() == RORG.RPS)) {
             return null;
@@ -77,38 +99,48 @@ public class EEPFactory {
         switch (msg.getRORG()) {
             case RPS:
                 try {
-                    EEP result = new F6_01_01(msg);
-                    if (result.isValid()) { // check if t21 is set, nu not set, and data == 0x10 or 0x00
+                    _RPSMessage result = new F6_10_00(msg);
+                    if (result.isValidForTeachIn()) {
                         return result;
                     }
                 } catch (Exception e) {
                 }
 
                 try {
-                    EEP result = new F6_02_01(msg);
-                    if (result.isValid()) { // check if highest bit is not set
+                    _RPSMessage result = new F6_10_01(msg);
+                    if (result.isValidForTeachIn()) {
                         return result;
                     }
                 } catch (Exception e) {
                 }
 
                 try {
-                    EEP result = new F6_10_00(msg);
-                    if (result.isValid()) {
+                    _RPSMessage result = new F6_02_01(msg);
+                    if (result.isValidForTeachIn()) {
                         return result;
                     }
                 } catch (Exception e) {
                 }
+
                 try {
-                    EEP result = new F6_10_00_EltakoFPE(msg);
-                    if (result.isValid()) { // check if data == 0x10 or 0x00
+                    _RPSMessage result = new F6_05_02(msg);
+                    if (result.isValidForTeachIn()) {
                         return result;
                     }
                 } catch (Exception e) {
                 }
+
                 try {
-                    EEP result = new F6_10_01(msg);
-                    if (result.isValid()) {
+                    _RPSMessage result = new F6_01_01(msg);
+                    if (result.isValidForTeachIn()) {
+                        return result;
+                    }
+                } catch (Exception e) {
+                }
+
+                try {
+                    _RPSMessage result = new F6_10_00_EltakoFPE(msg);
+                    if (result.isValidForTeachIn()) {
                         return result;
                     }
                 } catch (Exception e) {
@@ -120,8 +152,8 @@ public class EEPFactory {
             case _4BS: {
                 int db_0 = msg.getPayload()[4];
                 if ((db_0 & _4BSMessage.LRN_Type_Mask) == 0) { // Variation 1
-                    logger.info("Received 4BS Teach In variation 1 without EEP");
-                    return null;
+                    logger.info("Received 4BS Teach In variation 1 without EEP, fallback to generic thing");
+                    return buildEEP(EEPType.Generic4BS, msg);
                 }
 
                 byte db_3 = msg.getPayload()[1];
@@ -132,19 +164,21 @@ public class EEPFactory {
                 int type = ((db_3 & 0b11) << 5) + ((db_2 & 0xFF) >>> 3);
                 int manufId = ((db_2 & 0b111) << 8) + (db_1 & 0xff);
 
-                logger.info("Received 4BS Teach In with EEP A5-{}-{} and manufacturerID {}",
+                logger.debug("Received 4BS Teach In with EEP A5-{}-{} and manufacturerID {}",
                         HexUtils.bytesToHex(new byte[] { (byte) func }),
                         HexUtils.bytesToHex(new byte[] { (byte) type }),
                         HexUtils.bytesToHex(new byte[] { (byte) manufId }));
 
                 EEPType eepType = EEPType.getType(RORG._4BS, func, type, manufId);
                 if (eepType == null) {
-                    logger.debug("Received unsupported EEP teach in, fallback to generic thing");
-                    eepType = EEPType.Generic4BS;
+                    eepType = getGenericEEPTypeFor(RORG._4BS.getValue());
                 }
 
-                return buildEEP(eepType, msg);
+                if (eepType != null) {
+                    return buildEEP(eepType, msg);
+                }
             }
+                break;
             case UTE: {
                 byte[] payload = msg.getPayload();
 
@@ -161,43 +195,90 @@ public class EEPFactory {
 
                 EEPType eepType = EEPType.getType(RORG.getRORG(rorg), func, type, manufId);
                 if (eepType == null) {
-                    logger.info("Received unsupported EEP teach in, fallback to generic thing");
-                    RORG r = RORG.getRORG(rorg);
-                    if (r == RORG._4BS) {
-                        eepType = EEPType.Generic4BS;
-                    } else if (r == RORG.VLD) {
-                        eepType = EEPType.GenericVLD;
-                    } else {
-                        return null;
-                    }
+                    eepType = getGenericEEPTypeFor(rorg);
                 }
 
-                return buildEEP(eepType, msg);
+                if (eepType != null) {
+                    return buildEEP(eepType, msg);
+                }
             }
-            case Unknown:
-            case VLD:
-            case MSC:
-            case SIG:
+                break;
+            default:
                 return null;
         }
 
         return null;
     }
 
-    public static EEP buildResponseEEPFromTeachInERP1(ERP1Message msg, byte[] senderId) {
+    public static EEP buildEEPFromTeachInSMACKEvent(EventMessage event) {
+        if (event.getEventMessageType() != EventMessageType.SA_CONFIRM_LEARN) {
+            return null;
+        }
+
+        byte[] payload = event.getPayload();
+        byte manufIdMSB = payload[2];
+        byte manufIdLSB = payload[3];
+        int manufId = ((manufIdMSB & 0b111) << 8) + (manufIdLSB & 0xff);
+
+        byte rorg = payload[4];
+        int func = payload[5] & 0xFF;
+        int type = payload[6] & 0xFF;
+
+        byte[] senderId = Arrays.copyOfRange(payload, 12, 12 + 4);
+
+        logger.debug("Received SMACK Teach In with EEP {}-{}-{} and manufacturerID {}",
+                HexUtils.bytesToHex(new byte[] { (byte) rorg }), HexUtils.bytesToHex(new byte[] { (byte) func }),
+                HexUtils.bytesToHex(new byte[] { (byte) type }), HexUtils.bytesToHex(new byte[] { (byte) manufId }));
+
+        EEPType eepType = EEPType.getType(RORG.getRORG(rorg), func, type, manufId);
+        if (eepType == null) {
+            eepType = getGenericEEPTypeFor(rorg);
+        }
+
+        return createEEP(eepType).setSenderId(senderId);
+    }
+
+    public static EEP buildResponseEEPFromTeachInERP1(ERP1Message msg, byte[] senderId, boolean teachIn) {
         switch (msg.getRORG()) {
             case UTE:
-                EEP result = new UTEResponse(msg);
+                EEP result = new UTEResponse(msg, teachIn);
                 result.setSenderId(senderId);
 
                 return result;
             case _4BS:
-                result = new _4BSTeachInVariation3Response(msg);
+                result = new _4BSTeachInVariation3Response(msg, teachIn);
                 result.setSenderId(senderId);
 
                 return result;
             default:
                 return null;
         }
+    }
+
+    public static SMACKTeachInResponse buildResponseFromSMACKTeachIn(EventMessage event, boolean sendTeachOuts) {
+        SMACKTeachInResponse response = new SMACKTeachInResponse();
+
+        byte priority = event.getPayload()[1];
+        if ((priority & 0b1001) == 0b1001) {
+            logger.debug("gtw is already postmaster");
+            if (sendTeachOuts) {
+                logger.debug("Repeated learn is not allow hence send teach out");
+                response.setTeachOutResponse();
+            } else {
+                logger.debug("Send a repeated learn in");
+                response.setRepeatedTeachInResponse();
+            }
+        } else if ((priority & 0b100) == 0) {
+            logger.debug("no place for further mailbox");
+            response.setNoPlaceForFurtherMailbox();
+        } else if ((priority & 0b10) == 0) {
+            logger.debug("rssi is not good enough");
+            response.setBadRSSI();
+        } else if ((priority & 0b1) == 0b1) {
+            logger.debug("gtw is candidate for postmaster => teach in");
+            response.setTeachIn();
+        }
+
+        return response;
     }
 }
